animetion for start and fixed navigation transparent color

--- a/JP_crossword.vcxproj.filters
+++ b/JP_crossword.vcxproj.filters
@@ -36,6 +36,9 @@
     <ClCompile Include="GameState.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="GameStyle.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Game.h">
@@ -54,6 +57,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="GameState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GameStyle.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
